--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "client",
+  "name": "movie-discovery-app",
+  "description": "A modern React application for discovering and tracking trending movies using TMDB API and Appwrite backend",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "lint:fix": "eslint . --fix",
+    "preview": "vite preview",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
